# python-technical-challenge

./: Dockerfile  Makefile  main.py  pyproject.toml  pytest.ini  readme.md
extensions/batching/: models.py
routers/: contracts.py  orders.py
src/: question1.py  question2.py
tests/: conftest.py  test_api.py  test_contracts.py  test_orders.py
