[tool.poetry]
name = "teste-python"
version = "0.1.0"
description = ""
authors = ["Abraão de Andrade Farias Reis"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pylint = "^3.1.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
aiodns = "^3.2.0"
aiohttp = "^3.9.3"
aiosignal = "^1.3.1"
anyio = "^4.3.0"
async-timeout = "^4.0.3"
typing-extensions = "^4.11.0"
watchfiles = "^0.21.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
